deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mdrepo-frontend
  namespace: mudry-ns
  labels:
    app: mdrepo-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mdrepo-frontend
  template:
    metadata:
      labels:
        app: mdrepo-frontend
    spec:
      securityContext:
        runAsUser: 101
        runAsGroup: 101
        fsGroup: 101
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: mdrepo-frontend
        image: cerit.io/xmudry/mdrepo-frontend:v0.3
        ports:
        - containerPort: 8080
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: tmp
        emptyDir: {}
