deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mdrepo-frontend-ingress
  namespace: mudry-ns
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "mdrepo-frontend.dyn.cloud.e-infra.cz"
      secretName: mdrepo-frontend-dyn-cloud-e-infra-cz-tls
  rules:
  - host: "mdrepo-frontend.dyn.cloud.e-infra.cz"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mdrepo-frontend-svc
            port:
              number: 80
